--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Text Master OCR</string>
-    <string name="PLAY_STORE_URL">https://play.google.com/store/apps/details?id=devesh.app.ocr</string>
-    <string name="GALAXY_STORE_URL">https://galaxystore.samsung.com/detail/devesh.app.ocr</string>
+    <string name="app_name" translatable="false">Text Master OCR</string>
+    <string name="PLAY_STORE_URL" translatable="false">https://play.google.com/store/apps/details?id=devesh.app.ocr</string>
+    <string name="GALAXY_STORE_URL" translatable="false">https://galaxystore.samsung.com/detail/devesh.app.ocr</string>
 </resources>
